// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLinks render as sidebar, with navigation and sub-items 1`] = `
<nav
  class="nav-links"
>
  <ul
    class="nav-ul"
  >
    <li
      class="nav-item"
    >
      <dropdownlink-stub
        item="[object Object]"
      />
    </li>
     
    <li
      class="nav-item"
    >
      <router-link
        class="nav-link"
        to="/languages/"
      >
        Languages
      </router-link>
    </li>
  </ul>
</nav>
`;

exports[`NavLinks render as sidebar, with no navigation 1`] = `<!---->`;

exports[`NavLinks render not as sidebar 1`] = `
<nav
  class="nav-links"
>
  <ul
    class="nav-ul"
  >
    <li
      class="nav-item"
    >
      <dropdownlink-stub
        item="[object Object]"
      />
    </li>
     
    <!---->
  </ul>
</nav>
`;
